[package]
name = "macress"
version = "0.0.1"
authors = ["Sydney Acksman <obsidianminor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies.serde]
version = "1.0"
default-features = false
optional = true